fixed margin, worked on styling, spacing

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,6 @@
-.dashboard-posts {
+main {
+    margin-bottom: 30px;
     margin-left: 20px;
+    margin-right: 20px;
 }
+
